backends/foundation_macros/tests/trybuild/fail/json_hash_missing_serialize.rs
use foundation_macros::JsonHash;

// Missing Serialize - should fail
#[derive(JsonHash)]
pub struct InvalidStruct {
    pub name: String,
}

fn main() {}
